# TCPUtils

./: .gitignore  README.md
DataPackage/: DataPackage.sln
DataPackage/DataPackage/: DataPackage.vcxproj  DataPackage.vcxproj.filters
DataPackage/DataPackage/Inc/: YDataHeader.h
TCPClient/: CMakeLists.txt  TCPClient.sln
TCPClient/TCPClient/: CMakeLists.txt  TCPClient.vcxproj  TCPClient.vcxproj.filters
TCPClient/TCPClient/Inc/: IYTCPClient.h
TCPClient/TCPClient/Src/: CYTCPClient.cpp
TCPClient/TCPClient/_Inc/: CYTCPClient.h
TCPClient/TCPTest/: TCPTest.vcxproj  main.cpp
TCPServer/: CMakeLists.txt  TCPServer.sln
TCPServer/TCPServer/: CMakeLists.txt  TCPServer.vcxproj  TCPServer.vcxproj.filters
TCPServer/TCPServer/Inc/: IYExport.h  IYNet_Errcode.h  IYTCPServer.h
TCPServer/TCPServer/Src/: CYServerTask.cpp  CYTCPServer.cpp
TCPServer/TCPServer/_Inc/: CYServerTask.h  CYTCPServer.h
TCPServer/TCPServerTest/: TCPServerTest.vcxproj  main.cpp
Utils/: Utils.sln
Utils/Utils/: Utils.vcxproj  Utils.vcxproj.filters
Utils/Utils/Inc/: YTimeUtils.h
Utils/Utils/Src/: YTimeUtils.cpp
